update email form

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <h2 class="section-title">Contact Me</h2>
         <form
           id="contact-form"
-          action="https://formsubmit.co/gregorybeas4@gmail.com"
+          action="https://formsubmit.co/5932f36859029b908e4f179773354efa"
           method="POST"
         >
           <div class="input-wrapper">
@@ -178,7 +178,7 @@
             required
           ></textarea>
           <input type="hidden" name="_subject" value="New Portfolio message!">
-          <input type="hidden" name="_next" value="thank-you.html">
+          <input type="hidden" name="_next" value="greg-beas.dev/thank-you.html">
           <input type="hidden" name="_captcha" value="false">
           <div class="contact-form_button-wrapper">
             <button type="submit">
