thankyou page after submit fix

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             required
           ></textarea>
           <input type="hidden" name="_subject" value="New Portfolio message!">
-          <input type="hidden" name="_next" value="greg-beas.dev/thank-you">
+          <input type="hidden" name="_next" value="https://greg-beas.dev/thank-you.html">
           <input type="hidden" name="_captcha" value="false">
           <div class="contact-form_button-wrapper">
             <button type="submit">
