--- a/thank-you.html
+++ b/thank-you.html
@@ -6,6 +6,7 @@
     <title>Thank You</title>
     <meta name="description" content="Portfolio page for Greg Beas" />
     <meta name="author" content="Greg Beas" />
+    <link rel="icon" href="assets/logo-icon.png" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
