--- a/thank-you.html
+++ b/thank-you.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Portfolio page for Greg Beas" />
     <meta name="author" content="Greg Beas" />
     <link rel="icon" href="assets/logo-icon.png" />
+    <link rel="apple-touch-icon" href="assets/apple-touch-icon" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
