add about me list item

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                 <li>Sass</li>
                 <li>Tailwind</li>
                 <li>Bootstrap</li>
+                <li>Figma</li>
               </ul>
             </div>
             <a href="#projects">
