--- a/thank-you.html
+++ b/thank-you.html
@@ -82,7 +82,7 @@
         <h1>
           Thank you for your submission.
         </h1>
-        <h2>I will get back you you as soon as I can.</h2>
+        <h2>I will get back to you as soon as I can.</h2>
         <a class="thank-you-button" href="index.html#hero">Back to Home</a>
       </div>
     </main>
