--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 </span>
             </div>
             <div class="projects-card_back">
-              <p>Responsive, mobile-first design built with Tailwind UI<br><br>Cart component in navigation bar with add to cart functionality<br></p>
+              <p>Responsive, mobile-first design built with Tailwind<br><br>Cart component in navigation bar with add to cart functionality<br></p>
               <div class="icon-wrapper">
               <a
               href="https://github.com/gregbeas/the-shop-vite-typescript"
