--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </li>
           <li>
             <a
-              href="./assets/Beas, Greg Resume.pdf"
+              href="./assets/Beas, Gregory Resume.pdf"
               target="_blank"
               class="nav-link"
               id="resume-link"
