--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     </main>
     <footer class="flex">
       <div id="socials" class="flex">
-        <a href="https://www.linkedin.com/in/greg-beas" target="_blank" aria-label="LinkedIn"
+        <a href="https://www.linkedin.com/in/gregory-beas" target="_blank" aria-label="LinkedIn"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
             height="2em"
