--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             development began when I realized the projects I can create don't have to be physical, and the tools I
             learn about don't have to be ones I can hold in my hand. <br> <br>
             Now, having transitioned exclusively to digital tools, I am commited to building accessible and responsive
-            digital products, and passionate about expanding my knowledge on the technolgies available to do so.
+            digital products, and passionate about expanding my knowledge on the technologies available to do so.
           </p>
           <div class="about-me_aside">
             <div class="tools">
