--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             I enjoy learning about and using the tools available to me to build new and exciting projects. My love for web
             development began when I realized the projects I can create don't have to be physical, and the tools I
             learn about don't have to be ones I can hold in my hand. <br> <br>
-            Now, having transitioned exclusively to digital tools, I am commited to building accessible and responsive
+            Now, having transitioned exclusively to digital tools, I am committed to building accessible and responsive
             digital products, and passionate about expanding my knowledge on the technologies available to do so.
           </p>
           <div class="about-me_aside">
