fix invent typo

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <div class="flip-card">
             <div class="projects-card_front" id="projects-card_10">
               <div class="projects-card_text">
-                <h3 class="projects-card_title">Ivent Automation</h3>
+                <h3 class="projects-card_title">Invent Automation</h3>
                 <p class="projects-card_tools">
                   Wordpress - PHP - Tailwind - React
                 </p>
